pxc/tests/test_003_interface/interf_constr.px
import core::common -;

public namespace interf_constr;

interface ifoo {
  public function void m1() const;
}

struct foo < ifoo > {
  public function void m1() const {
    println("m1");
  }
}

function void test2(ptr{ifoo} x)
{
  x->m1();
}

function void test1()
{
  ptr{ifoo} f; // error: not default-constructible
  // ptr{ifoo} f = foo();
  test2(f);
}

test1();
